# CV2077

./: .gitignore  README.md  pyproject.toml
HW1/: main.py  report.md
HW2/: 110590004_hw2.py  report.typ
HW3/: 110590004_hw3.py  report.typ
HW4/: 110590004_hw4.py  report.typ
HW5/: 110590004_hw5.py  report.typ
HW6/: 110590004_hw6.py  report.typ
